language/move-compiler/tests/move_check/expansion/unbound_module_alias_in_type.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/expansion/unbound_module_alias_in_type.move:2:13
  │
2 │     fun foo(x: X::T) {}
  │             ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'

error[E03002]: unbound module
  ┌─ tests/move_check/expansion/unbound_module_alias_in_type.move:2:16
  │
2 │     fun foo(x: X::T) {}
  │                ^ Unbound module alias 'X'

